# ParaViewGeo

./: .gitmodules  CMakeLists.txt  PVG_LICENSE.txt
Plugins/PVGPlugins/ClosedSource/: CMakeLists.txt  description.doc
Plugins/PVGPlugins/ClosedSource/ABRI/: CMakeLists.txt
Plugins/PVGPlugins/ClosedSource/ABRI/Filters/: ABRIGUI.qrc  ABRISFCategory.xml  ABRISFSM.xml  CMakeLists.txt
Plugins/PVGPlugins/ClosedSource/ABRI/Writers/: ABRIWriterClient.xml  ABRIWriterSM.xml  CMakeLists.txt
Plugins/PVGPlugins/ClosedSource/ARG/: CMakeLists.txt
Plugins/PVGPlugins/ClosedSource/ARG/ArgReader/: Activity.cxx  Activity.h  ArgReader.qrc  ArgReader.xml  ArgReaderGUI.xml  CMakeLists.txt  pqArgReader.cxx  pqArgReader.h  pqArgReader.ui  pqUI.qrc  vtkArgReader.cxx  vtkArgReader.h
Plugins/PVGPlugins/ClosedSource/DrillholeGA/: CMakeLists.txt  Doxyfile  DrillholeGA.xml  DrillholeGACategory.xml  GA.cxx  GA.h  pqDrillholeGA.cxx  pqDrillholeGA.h  pqDrillholeGA.qrc  pqDrillholeGA.ui  vtkDrillholeGA.cxx  vtkDrillholeGA.h
Plugins/PVGPlugins/ClosedSource/ResourceStatistics/AnisotropicResourceClassifier/: AnisotropicResourceClassifier.xml  AnisotropicResourceClassifierCategory.xml  CMakeLists.txt  vtkAnisotropicResourceClassifier.cxx  vtkAnisotropicResourceClassifier.h
Plugins/PVGPlugins/ClosedSource/ResourceStatistics/IsotropicResourceClassifier/: CMakeLists.txt  IsotropicResourceClassifier.xml  IsotropicResourceClassifierCategory.xml  vtkIsotropicResourceClassifier.cxx  vtkIsotropicResourceClassifier.h
Plugins/PVGPlugins/ClosedSource/ResourceStatistics/Kriging/: CMakeLists_Chris.txt  Kriging.xml  KrigingCategory.xml  vtkDrillholeGA_.cxx  vtkDrillholeGA_Chris.h  vtkGeoValue.cpp  vtkGeoValue.h  vtkKriging.cpp  vtkKriging.h  vtkNeighborhood.h  vtkPointSetNeighborhood.cpp  vtkPointSetNeighborhood.h
Plugins/PVGPlugins/ClosedSource/SurfaceProb/: CMakeLists.txt  SurfaceProb.xml  SurfaceProbCategory.xml  vtkSurfaceProb.cxx  vtkSurfaceProb.h
Plugins/PVGPlugins/ClosedSource/Xuzhou/: CMakeLists.txt  XuzhouGUI.qrc  XuzhouGUI.xml  XuzhouSM.xml
Plugins/PVGPlugins/ClosedSource/Xuzhou/LineNetworkReader/: CMakeLists.txt  LineNetworkReader.qrc  pqLineNetworkReader.cxx  pqLineNetworkReader.h  pqLineNetworkReader.ui  pqUI.qrc  vtkLineNetworkReader.cpp  vtkLineNetworkReader.h  xuzhou_vent_75210.lnr
Plugins/PVGPlugins/ClosedSource/Xuzhou/MethaneReader/: CMakeLists.txt  MethaneReader.qrc  MethaneReader.xml  MethaneReaderGUI.xml  vtkMethaneReader.cxx  vtkMethaneReader.h
Plugins/PVGPlugins/ClosedSource/Xuzhou/XUZHOUReaders/: CMakeLists.txt  XUZHOUReader.qrc  XUZHOUReader.xml  XUZHOUReaderGUI.xml  vtkDrainageReader.cpp  vtkDrainageReader.h  vtkElectricalReader.cpp  vtkElectricalReader.h  vtkTransportationReader.cpp  vtkTransportationReader.h  vtkVentilationReader.cpp  vtkVentilationReader.h
Plugins/PVGPlugins/Development/: CMakeLists.txt
Plugins/PVGPlugins/Development/Filters/: CMakeLists.txt
Plugins/PVGPlugins/Development/Filters/AnisotropicProximityThreshold/: AnisotropicProximityThreshold.xml  AnisotropicProximityThresholdCategory.xml  CMakeLists.txt  vtkAnisotropicProximityThreshold.cxx  vtkAnisotropicProximityThreshold.h
Plugins/PVGPlugins/Development/Filters/Compositing/: AdvancedCompositing.xml  AdvancedCompositingCategory.xml  CMakeLists.txt  Compositing.xml  InsideLinesSurface.xml  InsideLinesSurfaceCategory.xml  InsidePointsSurface.xml  InsidePointsSurfaceCategory.xml  SliceCompositing.xml  SliceCompositingCategory.xml  vtkAdvancedCompositing.cxx  vtkAdvancedCompositing.h  vtkCompositing.cxx  vtkCompositing.h  vtkInsideLinesSurface.cxx  vtkInsideLinesSurface.h  vtkInsidePointsSurface.cxx  vtkInsidePointsSurface.h  vtkPolyStruct.cxx  vtkSliceCompositing.cxx  vtkSliceCompositing.h
Plugins/PVGPlugins/Development/Filters/DriftsAndStopesReconstruction/: CMakeLists.txt  DriftsAndStopesReconstruction.xml  DriftsAndStopesReconstructionCategory.xml  vtkDriftsAndStopesReconstruction.cxx  vtkDriftsAndStopesReconstruction.h
Plugins/PVGPlugins/Development/Filters/DrillHolesLinesRefinement/: CMakeLists.txt  DrillHolesAdvancedRefinement.xml  DrillHolesAdvancedRefinementCategory.xml  DrillHolesBoundingBoxRefinement.xml  DrillHolesBoundingBoxRefinementCategory.xml  DrillHolesLinesRefinement.xml  DrillHolesLinesRefinementCategory.xml  DrillHolesPointsRefinement.xml  DrillHolesPointsRefinementCategory.xml  InterpolateHolesFilter.xml  InterpolateHolesFilterCategory.xml  pqDrillHolesAdvancedRefinement.cxx  pqDrillHolesAdvancedRefinement.h  pqDrillHolesAdvancedRefinement.ui  pqDrillHolesAdvancedRefinementUI.qrc  pqDrillHolesLinesRefinement.cxx  pqDrillHolesLinesRefinement.h  pqDrillHolesLinesRefinement.ui  pqDrillHolesLinesRefinementUI.qrc  pqDrillHolesPointsRefinement.cxx  pqDrillHolesPointsRefinement.h  pqDrillHolesPointsRefinement.ui  pqDrillHolesPointsRefinementUI.qrc  vtkDrillHolesAdvancedRefinement.cxx  vtkDrillHolesAdvancedRefinement.h  vtkDrillHolesBoundingBoxRefinement.cxx  vtkDrillHolesBoundingBoxRefinement.h  vtkDrillHolesLinesRefinement.cxx  vtkDrillHolesLinesRefinement.h  vtkDrillHolesPointsRefinement.cxx  vtkDrillHolesPointsRefinement.h  vtkInterpolateHolesFilter.cxx  vtkInterpolateHolesFilter.h
Plugins/PVGPlugins/Development/Filters/EqualAreaPropFilter/: CMakeLists.txt  EqualAreaPropFilter.xml  pqEqualAreaPropFilter.cxx  pqEqualAreaPropFilter.h  pqEqualAreaPropFilter.ui  pqUI.qrc  vtkEqualAreaPropFilter.cxx  vtkEqualAreaPropFilter.h
Plugins/PVGPlugins/Development/Filters/FitDataset/: CMakeLists.txt  FitDataset.xml  FitDatasetCategory.xml  Inc3dCHull_ConvexHull.cpp  Inc3dCHull_ConvexHull.h  (+15 more)
Plugins/PVGPlugins/Development/Readers/: CMakeLists.txt
Plugins/PVGPlugins/Development/Writers/: CMakeLists.txt
Plugins/PVGPlugins/Stable/: CMakeLists.txt
Plugins/PVGPlugins/Stable/Filters/: CMakeLists.txt  GUI.qrc  SFCategory.xml  SFSM.xml
Plugins/PVGPlugins/Stable/Readers/: CMakeLists.txt  GUI.qrc  StableReaderClient.xml  StableReadersSM.xml  WinGUI.qrc  WindowsReadersClient.xml  WindowsReadersSM.xml
Plugins/PVGPlugins/Stable/Writers/: CMakeLists.txt  StableWriterClient.xml  StableWriterSM.xml
(+1448 files in other folders)
