PROJECT(Xuzhou)
INCLUDE(${PARAVIEW_USE_FILE})

FIND_PACKAGE(Qt4)
IF(QT4_FOUND)

INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(
${VTK_INCLUDE_DIR}
${PARAVIEW_INCLUDE_DIRS}
${ParaView_SOURCE_DIR}/VTK/GUISupport/Qt
${pqComponents_SOURCE_DIR}
${pqComponents_BINARY_DIR}
${pqCore_SOURCE_DIR}
${pqCore_BINARY_DIR}
${QtWidgets_SOURCE_DIR}
${QtWidgets_BINARY_DIR}
${QtChart_SOURCE_DIR}
${QtChart_BINARY_DIR}
${QtTesting_SOURCE_DIR}
${QtTesting_BINARY_DIR}
${QtPython_SOURCE_DIR}
${QtPython_BINARY_DIR}
LineNetworkReader
)

SET( MIRARCO_SRCS
LineNetworkReader/vtkLineNetworkReader.cpp
)

SET(MIRARCO_GUI_SRCS
LineNetworkReader/pqLineNetworkReader.cxx
)

SET(MOC_LIST
LineNetworkReader/pqLineNetworkReader.h
)

QT4_WRAP_CPP(MOC_SRCS ${MOC_LIST})

ADD_PARAVIEW_OBJECT_PANEL(IFACES IFACE_SRCS CLASS_NAME pqLineNetworkReader
                         XML_NAME LineNetworkReader XML_GROUP sources)


ADD_PARAVIEW_PLUGIN(XuzhouSMPlugin "1.0"
			SERVER_MANAGER_XML XuzhouSM.xml
			SERVER_MANAGER_SOURCES  ${MIRARCO_SRCS}
			)

ADD_PARAVIEW_PLUGIN(XuzhouGUIPlugin "1.0"
             GUI_INTERFACES ${IFACES} 
             GUI_RESOURCES XuzhouGUI.qrc
             SOURCES ${MIRARCO_GUI_SRCS} ${MOC_SRCS} ${IFACE_SRCS}
			)

ADD_PARAVIEW_PLUGIN(XuzhouCPlugin  "1.0" 
			GUI_RESOURCE_FILES XuzhouGUI.xml)

ENDIF(QT4_FOUND)

#CPACK CODE TO BUNDLE THE DLLS CORRECTLY
INSTALL(TARGETS XuzhouSMPlugin XuzhouCPlugin XuzhouGUIPlugin
	RUNTIME DESTINATION bin/plugins COMPONENT Runtime
	LIBRARY DESTINATION bin/plugins 
	ARCHIVE DESTINATION bin/plugins 
)
