PROJECT(ABRIWriters)
INCLUDE(${PARAVIEW_USE_FILE})

FIND_PACKAGE(Qt4)
IF(QT4_FOUND)

INCLUDE(${QT_USE_FILE})


FILE(GLOB CLIPS_FILES_CPP "${CMAKE_CURRENT_SOURCE_DIR}/AbriToSotWriter/CLIPS/*.c")
FILE(GLOB CLIPS_FILES_H "${CMAKE_CURRENT_SOURCE_DIR}/AbriToSotWriter/CLIPS/*.h")
FILE(GLOB CLIPS_INTEGRATION_C "${CMAKE_CURRENT_SOURCE_DIR}/AbriToSotWriter/CLIPS/Integration/*.c")
FILE(GLOB CLIPS_INTEGRATION_CPP "${CMAKE_CURRENT_SOURCE_DIR}/AbriToSotWriter/CLIPS/Integration/*.cpp")
FILE(GLOB CLIPS_INTEGRATION_H "${CMAKE_CURRENT_SOURCE_DIR}/AbriToSotWriter/CLIPS/Integration/*.h")


INCLUDE_DIRECTORIES(
${VTK_INCLUDE_DIR}
${PARAVIEW_INCLUDE_DIRS}
${ParaView_SOURCE_DIR}/VTK/GUISupport/Qt
${pqComponents_SOURCE_DIR}
${pqComponents_BINARY_DIR}
${pqCore_SOURCE_DIR}
${pqCore_BINARY_DIR}
${QtWidgets_SOURCE_DIR}
${QtWidgets_BINARY_DIR}
${QtChart_SOURCE_DIR}
${QtChart_BINARY_DIR}
${QtTesting_SOURCE_DIR}
${QtTesting_BINARY_DIR}
${QtPython_SOURCE_DIR}
${QtPython_BINARY_DIR}
../../../Stable/Filters/SharedCode
AbriToSotWriter
)

SET( ABRIWriters_SM_SRCS
AbriToSotWriter/vtkAbriToSotWriter.cxx
)

SET( ABRIWriters_EXTRA_SRCS
../../../Stable/Filters/SharedCode/TimeConverter.cxx
)

SET( CLIPS_SOURCES
	${CLIPS_FILES_CPP}
	${CLIPS_FILES_H}
	${CLIPS_INTEGRATION_CPP}
	${CLIPS_INTEGRATION_C}
	${CLIPS_INTEGRATION_H}
	)
	

ADD_PARAVIEW_PLUGIN(ABRIWritersSMPlugin "1.0"
			SERVER_MANAGER_XML ABRIWriterSM.xml
			SERVER_MANAGER_SOURCES  ${ABRIWriters_SM_SRCS}
			SERVER_SOURCES  ${ABRIWriters_EXTRA_SRCS} ${CLIPS_SOURCES}
			)
			
			
ADD_PARAVIEW_PLUGIN(ABRIWritersCPlugin "1.0"
	GUI_RESOURCE_FILES ABRIWriterClient.xml) 


#CPACK CODE TO BUNDLE THE DLLS CORRECTLY
INSTALL(TARGETS ABRIWritersCPlugin ABRIWritersSMPlugin
	RUNTIME DESTINATION bin/plugins COMPONENT Runtime
	LIBRARY DESTINATION bin/plugins 
	ARCHIVE DESTINATION bin/plugins 
  )
ENDIF(QT4_FOUND)